--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "rust-esp32-recv"
 version = "0.1.0"
 authors = ["Kamil Grzymkowski <kamo.gabo@gmail.com>"]
 edition = "2021"
-license = "Apache-2.0"
+license = "MIT"
 
 [profile.dev]
 opt-level = 3
