--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ smoltcp = { version = "0.11.0", default-features = false, features = ["medium-et
 embedded-svc = { version = "0.27.0", default-features = false, features = [] }
 
 esp-hal-procmacros = { version = "0.8.0", default-features=false, features = ["ram","embassy","esp32","interrupt"] }
-esp-wifi = { version = "0.3.0", features = ["esp32","wifi","esp-now","async","embassy-net"] }
+esp-wifi = { git="https://github.com/kamo104/esp-wifi.git", version = "0.3.0", features = ["esp32","wifi","esp-now","async","embassy-net"] }
 esp32-hal = {version = "0.18.0", default-features=true, features=[
     # "embassy",
     "embassy-time-timg0",
@@ -49,6 +49,7 @@ static_cell = { version = "2.0", features = ["nightly"] }
 rust-mqtt = { version = "0.3.0", default-features=false, features = ["no_std"] }
 int-enum = "1.0.1"
 heapless = "0.8.0"
+log = "0.4.21"
 
 [features]
 default = ["esp32-hal/xtal-40mhz"]
