🦄 refactor: optional serde
Locked serde to an optional feature to allow for code portability

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,13 +47,12 @@ esp-alloc = { version = "0.3.0" }
 static_cell = { version = "2.0", features = ["nightly"] }
 
 rust-mqtt = { version = "0.3.0", default-features=false, features = ["no_std"] }
-int-enum = "1.0.1"
 heapless = "0.8.0"
 log = "0.4.21"
 
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
-serde = { version = "1.0", default-features = false, features = ["derive"] }
+serde = { optional = true, version = "1.0", default-features = false, features = ["derive"] }
 hashbrown = { version= "0.14", features = ["serde"] }
 [features]
-default = ["esp32-hal/xtal-40mhz"]
+default = ["esp32-hal/xtal-40mhz","serde"]
 
